--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_DEMO=false
-APP_NAME=ssrpanel
+APP_NAME=SSR
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -12,7 +12,7 @@ LOG_CHANNEL=daily
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ssrpanel
+DB_DATABASE=ssr
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_STRICT=false
@@ -34,7 +34,7 @@ MAIL_USERNAME=admin@ssrpanel.com
 MAIL_PASSWORD=password
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=admin@ssrpanel.com
-MAIL_FROM_NAME=SSRPanel
+MAIL_FROM_NAME=SSR
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
 
